Fix banner image cut off

--- a/components/intro/index.css
+++ b/components/intro/index.css
@@ -224,7 +224,7 @@
 
   .Intro-image,
   .Intro-container {
-    margin: 4rem 0 -2rem;
+    margin: 4rem 0 0;
   }
 
   .Intro-badge {
